--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "materials",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A collection of materials.",
   "main": "index.js",
   "repository": {
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/jimkang/materials",
   "dependencies": {
-    "jsonfile": "^2.0.0"
+    "jsonfile": "^2.0.0",
+    "lodash": "^3.6.0"
   }
 }
